[package]
name = "control-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["reqwest"]
hyper = ["dep:hyper","hyper-rustls","rustls"]

[dependencies]
tonic = "0.8.3"
tokio = "1.26.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
clap = { version = "4.1.8", features = ["derive"] }
prost = "0.11.8"
serde = { version = "1.0.154", features = ["derive"] }
serde_json = "1.0.94"
rand = "0.8.5"
rust-argon2 = "1.0.0"
hyper-rustls = { version = "0.23.2", optional = true }
hyper = { version = "0.14.25", optional = true }
rustls = { version = "0.20.8", optional = true }
const_format = { version = "0.2.30", features=["fmt"] }
reqwest = { version = "0.11.18", features=["json"], optional = true }
axum = "0.6.18"

[dev-dependencies]
libc = "0.2.140"


[build-dependencies]
tonic-build = "0.8.4"